<resources>
    <string name="app_name" translatable="false">ministery</string>
    <string name="sign_up">Sign up</string>

    <!-- Sign In and Sign up -->
    <string name="inscription_text">Inscription</string>
    <string name="connexion_text">Connexion</string>
    <string name="enter_name">Nom d\'utilisateur</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Mot de passe (6 lettres min)</string>
    <string name="confirme_mdp">Confirmer mot de passe</string>
    <string name="sign_in_btn">S\'inscrire</string>
    <string name="log_in_btn">Se connecter</string>
    <string name="social_media_signIn">Se connecter avec :</string>
    <string name="create_account">Créer un compte</string>
    <string name="go_login"><u>Déjà membre ?</u></string>
    <string name="forgot_password"><u>Mot de passe oublié ?</u></string>
    <string name="forgot_password_title">Réinitialisation</string>
    <string name="forgot_password_button">Réinitialiser mot de passe</string>

    <!--ERRORS - Text fields controllers -->
    <string name="missing_email">Veuillez entrez un mail valide</string>
    <string name="missing_password">Veuillez saisir un mot de passe</string>
    <string name="missing_name">Veuillez saisir un nom d\'utilisateur</string>
    <string name="missing_password_confirmation">Veuillez confirmer votre mot de passe</string>
    <string name="mismatching_password">La confirmation ne correspond pasau mot de passe</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="besoin">Besoin</string>
    <string name="offres">Offres</string>
    <string name="description_audio">Description audio</string>
    <string name="adresse_map">Adresse map</string>
    <string name="profile">Profile</string>
    <string name="enter_a_text_here_26_char_max">Enter a text here (26 char max)</string>
    <string name="mes_articles">Mes articles</string>
    <string name="Contacter">Contacter</string>
    <string name="propri_taire">Propriétaire</string>
    <string name="service">Service</string>
    <string name="nom_hint">Nom</string>
    <string name="type_hint">Type</string>
    <string name="prix_hint">Prix</string>
    <string name="wilaya_hint">Wilaya</string>
    <string name="description_hint">Description :</string>
    <string name="confirmer_ajout">Confirmer</string>
    <string name="entrer_une_photo">Entrer une photo</string>
    <string name="entrer_photo_in_dialog">Entrer une photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Choose from Gallery</string>
    <string name="cancel_adding_photo">Cancel</string>
    <string name="mes_enregistrement">Mes enregistrement</string>
    <string name="commencer">Commencer</string>
    <string name="entrer_adresse">Entrer adresse</string>


    <string name="nom_du_service">Nom du service</string>

    <!--products -->
    <string name="type">Type</string>
    <string name="description_product">Description</string>
    <string name="adresse_produit">Adresse</string>
    <string name="nom_proprietaire">Nom</string>
    <string name="email">Email :</string>
    <string name="num_t_l">Num Tél</string>
    <string name="signaler">Signaler</string>
    <string name="se_d_connecter">se déconnecter</string>
    <string name="echec_sms">Échec du SMS, veuillez réessayer plus tard</string>
    <string name="nom_d_utilisateur">Nom :</string>
    <string name="confirmer_annulation_enregistrement">Etes vous sur de vouloir annuler l\'enregistrement de cet article?</string>
    <string name="afficher_tout">Afficher tout</string>
    <string name="liste_vide">Liste vide</string>
    <string name="rechercher">Rechercher</string>
    <string name="entrer_num_tel">Entrer num tel</string>
    <string name="entrer_l_adresse">Entrer l\'adresse</string>
    <string-array name="types_handicapes">
        <item>Général</item>
        <item>auditif</item>
        <item>visuel</item>
        <item>Mental </item>
        <item>Handicap Psychique</item>

    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="localisation_errur_dialog">Votre appareil ne permet pas d\'avoir votre localisation, veillez vérifier vos parametres et réessayer de nouveau</string>
    <string name="modifier_la_langue">Modifier la langue</string>
    <string name="d_tails">Détails</string>
    <string name="modifier_le_nom_d_utilisateur">Modifier le nom d\'utilisateur</string>
    <string name="cette_fonctionnalit_sera_disponible_prochainement">Cette fonctionnalité sera disponible prochainement</string>
    <string name="entrer_le_nouveau_nom">Entrer le nouveau nom</string>
    <string name="param_tres">Paramètres</string>
    <string name="signal_detectes">Signal détéctés</string>
    <string name="signal_msg">Un de vos article a été supprimer à cause du nombre de signals recus</string>
    <string name="date_de_cr_ation">Date de création</string>
    <string name="date_d_enregistrement">Date d\'enregistrement</string>
    <string name="supp_compte">Supprimer votre compte</string>
    <string name="remplir_tt_leschamps">vous n\'avez pas remplis tous les champs</string>
    <string name="vous_avez_deja_signaler">Vous avez deja signaler ce produit</string>
    <string name="signal_echoue">le signalement a échoué</string>
    <string name="localisation_echoue">Localisation échoué</string>
    <string name="cette_liste_est_vide">Cette liste est vide</string>
    <string name="save">save</string>


</resources>
