<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    tools:context="MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:layout_marginVertical="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"

        android:layout_height="wrap_content"
        android:hint="@string/enter_name">


    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"

        android:layout_height="wrap_content"
        android:hint="@string/enter_email">


    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"

        android:layout_height="wrap_content"
        android:hint="@string/enter_password">


    </EditText>


    <Button
        android:id="@+id/sign_up"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"

        android:backgroundTint="@color/colorPrimary"
        android:shadowRadius="20"
        android:text="Sign up"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="20dp"
        android:text="Ou bien connectez vous avec" />


</LinearLayout>