<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:text="@string/param_tres"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
         >
    <TextView
        android:id="@+id/modif_lang"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_weight=".90"
        android:layout_height="50dp"
        android:text="@string/modifier_la_langue"
        />

            <ImageView
                android:id="@+id/arrow_lang"
                android:layout_width="0dp"
                android:layout_weight=".10"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
           />

        </LinearLayout>

            <RelativeLayout
                android:id="@+id/rel_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/cette_fonctionnalit_sera_disponible_prochainement"/>
            </RelativeLayout>


    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/places_autocomplete_error_message" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:orientation="horizontal">

    <TextView
        android:id="@+id/modif_nom"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_weight=".90"
        android:layout_height="50dp"
        android:text="@string/modifier_le_nom_d_utilisateur"
        />
            <ImageView
                android:id="@+id/arrow_nom"
                android:layout_width="0dp"
                android:layout_weight=".10"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"

                />

        </LinearLayout>

            <RelativeLayout
                android:id="@+id/rel_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/modif_nom_edt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/entrer_le_nouveau_nom"/>
            </RelativeLayout>
        <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
            android:background="@color/places_autocomplete_error_message" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:orientation="horizontal">
        <TextView

            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight=".90"
            android:layout_height="50dp"
            android:text="@string/d_tails"
          />
            <ImageView
                android:id="@+id/arrow_info"
                android:layout_width="0dp"
                android:layout_weight=".10"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"

                />

        </LinearLayout>

            <RelativeLayout
                android:id="@+id/rel_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="info"/>
            </RelativeLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/places_autocomplete_error_message" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:orientation="horizontal">

    <TextView
        android:id="@+id/dconnecter"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/se_d_connecter"
        />

        </LinearLayout>
    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/places_autocomplete_error_message" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/supp_compte"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/supp_compte"
            />

    </LinearLayout>
    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/places_autocomplete_error_message" />

</LinearLayout>
    </ScrollView>
</LinearLayout>