<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"

    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.ministerymob.SignUpActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/logo_insc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/connexion_text"
        android:textColor="@color/colorPrimary"
        android:textScaleX="1.2"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/text_area_insc"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/text_field_email_cnxn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/text_area_insc"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/text_field_pswd_cnxn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_log_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/bouton_insc"
        android:text="@string/log_in_btn"
        android:textColor="#FFFFFF">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/social_media_signIn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/facebook_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook_circular_logo"
            android:background="#0000"/>

        <ImageButton
            android:id="@+id/google_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/google_plus"
            android:background="#0000"/>

    </LinearLayout>


</LinearLayout>