<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"

    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.ministerymob.SignUpActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/logo_insc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textColor="@color/colorPrimary"
        android:textScaleX="1.2"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:background="@drawable/text_area_insc"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/text_field_email_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_email"
            android:textScaleX="1.2"
            android:inputType="textEmailAddress" />
    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_forgot_password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/bouton_insc"
        android:text="@string/forgot_password_button"
        android:textScaleX="1.2"
        android:textColor="#FFFFFF">

    </androidx.appcompat.widget.AppCompatButton>





</LinearLayout>