<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ministerymob.Market.AjouterProductActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"

            android:orientation="vertical">




            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"

                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

              <!--  <ImageView
                    android:id="@+id/img_product"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_image_black_24dp"
                    />
-->
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager_Aproduct"
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    />
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_Aproduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMaxWidth="10dp" />



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/entrer_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/nom_hint"


                        android:textColor="@android:color/black"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="horizontal">

                    <EditText
                       android:id="@+id/entrer_prix"
                        android:layout_width="0dp"
                        android:layout_weight=".60"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="10dp"
                        android:hint="@string/prix_hint"


                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="37dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight=".40"
                            app:cardCornerRadius="5dp">

                            <Spinner
                                android:id="@+id/spinnerAjout"
                                style="@style/mySpinnerItemStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <EditText

                        android:id="@+id/entrer_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="10dp"
                        android:hint="@string/description_hint"

                        android:textColor="@android:color/black"
                        android:textSize="18sp" />


                    <EditText

                        android:id="@+id/entrer_numTEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="10dp"
                        android:hint="@string/entrer_num_tel"
                        android:inputType="phone"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />


                    <EditText

                        android:id="@+id/entrer_adresseInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="10dp"
                        android:hint="@string/entrer_l_adresse"
                        android:inputType="phone"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />





                    <Button
                        android:id="@+id/entrer_adresse"
                        android:layout_width="match_parent"
                        app:backgroundTint="@color/colorText"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="12dp"

                        android:text="@string/entrer_adresse" />
                    <Button
                        android:id="@+id/confirmer_ajout"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/roboto"

                        android:text="@string/confirmer_ajout" />





                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>






</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>